# react--native-note-detectr

./: CONTRIBUTING.md  README.md  package-lock.json  package.json  react-native-note-detectr.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: AudioCorrelator.cpp  AudioCorrelator.h  AudioObserver.cpp  AudioObserver.h  AudioStreamManager.cpp  AudioStreamManager.h  Buffer.cpp  Buffer.h  native-lib.cpp
android/src/main/java/com/reactnativenotedetectr/: AudioObserver.java  NoteDetectrModule.java  NoteDetectrModule.kt  NoteDetectrPackage.java  NoteDetectrPackage.kt
example/: app.json  metro.config.js  package-lock.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/NoteDetectrExample/: AppDelegate.m  AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/NoteDetectrExample.xcodeproj/: project.pbxproj
example/ios/NoteDetectrExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: AudioCorrelator.cpp  AudioCorrelator.hpp  AudioStreamManager.cpp  AudioStreamManager.hpp  AudioStreamManagerObjC.h  AudioStreamManagerObjC.mm  Buffer.cpp  Buffer.hpp  NoteDetectr.h  NoteDetectr.m  Podfile
ios/NoteDetectr.xcodeproj/: project.pbxproj
src/: index.tsx
src/module/: AudioModule.tsx
src/module/android/: AndroidAudioModule.tsx
src/util/: NoteFrequencies.ts
(+7 files in other folders)
